<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sensor_detail_frag"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".sensordetail.EnvironmentalSensorDetailFragment">

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/environmentalsensor_detail_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="HOLA!" />

</LinearLayout>
