...
                android:layout_weight="1"
                android:gravity="top"
                android:text="name"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/textview_device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="FF:FF:FF:FF"
                android:textSize="12dp" />
...
